--- a/EQ/EQOrderCell.xib
+++ b/EQ/EQOrderCell.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.SystemVersion">12C3103</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.37</string>
-		<string key="IBDocument.HIToolboxVersion">626.00</string>
+		<string key="IBDocument.AppKitVersion">1187.34</string>
+		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">2083</string>
@@ -46,7 +46,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{30, 49}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="606195497"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -61,7 +60,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{28, 0}, {61, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="138424748"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -99,7 +97,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{88, 0}, {61, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="273324523"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -121,7 +118,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{157, 0}, {130, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="740901233"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -151,7 +147,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{295, 0}, {67, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="970150413"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -172,7 +167,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{370, 0}, {81, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269784634"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -193,7 +187,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{454, 0}, {35, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1073345466"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -215,7 +208,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{497, 0}, {81, 49}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="464053873"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -236,7 +228,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{586, 9}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="321914927"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -271,7 +262,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{641, 9}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991820849"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -293,8 +283,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{697, 9}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="96116575"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -316,7 +304,6 @@
 						</array>
 						<string key="NSFrameSize">{758, 48}</string>
 						<reference key="NSSuperview" ref="122638599"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="658325435"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -332,11 +319,11 @@
 				</array>
 				<string key="NSFrameSize">{758, 49}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="96116575"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<reference key="IBUIContentView" ref="96116575"/>
+				<string key="IBUIReuseIdentifier">OrderCell</string>
 				<real value="49" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -583,104 +570,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">101</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">EQImageView</string>
-					<string key="superclassName">UIImageView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EQImageView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EQOrderCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="cancelButtonAction:">id</string>
-						<string key="cloneButtonAction:">id</string>
-						<string key="editButtonAction:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="cancelButtonAction:">
-							<string key="name">cancelButtonAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="cloneButtonAction:">
-							<string key="name">cloneButtonAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="editButtonAction:">
-							<string key="name">editButtonAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="billingDateLabel">UILabel</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="clienLabel">UILabel</string>
-						<string key="cloneButton">UIButton</string>
-						<string key="discountLabel">UILabel</string>
-						<string key="editButton">UIButton</string>
-						<string key="grossPriceLabel">UILabel</string>
-						<string key="netPriceLabel">UILabel</string>
-						<string key="orderNumberLabel">UILabel</string>
-						<string key="statusImageView">EQImageView</string>
-						<string key="syncDateLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="billingDateLabel">
-							<string key="name">billingDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="clienLabel">
-							<string key="name">clienLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cloneButton">
-							<string key="name">cloneButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="discountLabel">
-							<string key="name">discountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="editButton">
-							<string key="name">editButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="grossPriceLabel">
-							<string key="name">grossPriceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="netPriceLabel">
-							<string key="name">netPriceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="orderNumberLabel">
-							<string key="name">orderNumberLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statusImageView">
-							<string key="name">statusImageView</string>
-							<string key="candidateClassName">EQImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="syncDateLabel">
-							<string key="name">syncDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EQOrderCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
