--- a/EQ/EQProductsViewController.xib
+++ b/EQ/EQProductsViewController.xib
@@ -241,7 +241,7 @@
 								<string key="NSFrame">{{724, 7}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="916255109"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="606265170"/>
+								<reference key="NSNextKeyView" ref="940565058"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -549,7 +549,6 @@
 								<string key="NSFrame">{{0, 80}, {768, 786}}</string>
 								<reference key="NSSuperview" ref="114104424"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="88082018">
 									<int key="NSColorSpace">3</int>
@@ -617,7 +616,7 @@
 												<int key="IBUIContentMode">7</int>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
 												<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-												<string key="IBUIText">Detalle</string>
+												<string key="IBUIText">Producto</string>
 												<object class="NSColor" key="IBUITextColor">
 													<int key="NSColorSpace">1</int>
 													<bytes key="NSRGB">MC4yNDMxMzcyNTQ5IDAuMjQzMTM3MjU0OSAwLjI0MzEzNzI1NDkAA</bytes>
@@ -685,7 +684,7 @@
 											</object>
 											<object class="IBUILabel" id="902164737">
 												<reference key="NSNextResponder" ref="625050204"/>
-												<int key="NSvFlags">292</int>
+												<int key="NSvFlags">-2147483356</int>
 												<string key="NSFrame">{{333, 89}, {137, 21}}</string>
 												<reference key="NSSuperview" ref="625050204"/>
 												<reference key="NSWindow"/>
@@ -779,7 +778,7 @@
 											<object class="IBUILabel" id="635264972">
 												<reference key="NSNextResponder" ref="625050204"/>
 												<int key="NSvFlags">292</int>
-												<string key="NSFrame">{{20, 49}, {560, 21}}</string>
+												<string key="NSFrame">{{20, 42}, {560, 51}}</string>
 												<reference key="NSSuperview" ref="625050204"/>
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="615550100"/>
@@ -789,7 +788,7 @@
 												<int key="IBUIContentMode">7</int>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
 												<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-												<string key="IBUIText">Grupo 2</string>
+												<string key="IBUIText">Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto Nombre del producto </string>
 												<object class="NSColor" key="IBUITextColor">
 													<int key="NSColorSpace">1</int>
 													<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -797,6 +796,7 @@
 												</object>
 												<nil key="IBUIHighlightedColor"/>
 												<int key="IBUIBaselineAdjustment">0</int>
+												<int key="IBUINumberOfLines">2</int>
 												<object class="IBUIFontDescription" key="IBUIFontDescription">
 													<int key="type">1</int>
 													<double key="pointSize">22</double>
@@ -807,6 +807,7 @@
 													<int key="NSfFlags">16</int>
 												</object>
 												<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+												<double key="preferredMaxLayoutWidth">560</double>
 											</object>
 											<object class="IBUITextView" id="615889997">
 												<reference key="NSNextResponder" ref="625050204"/>
@@ -889,7 +890,7 @@
 														<int key="IBUIContentMode">7</int>
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-														<string key="IBUIText">10</string>
+														<string key="IBUIText">0</string>
 														<reference key="IBUITextColor" ref="363634429"/>
 														<nil key="IBUIHighlightedColor"/>
 														<int key="IBUIBaselineAdjustment">0</int>
@@ -948,7 +949,7 @@
 														<int key="IBUIContentMode">7</int>
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-														<string key="IBUIText">10</string>
+														<string key="IBUIText">0</string>
 														<reference key="IBUITextColor" ref="363634429"/>
 														<nil key="IBUIHighlightedColor"/>
 														<int key="IBUIBaselineAdjustment">0</int>
@@ -1004,7 +1005,7 @@
 														<int key="IBUIContentMode">7</int>
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-														<string key="IBUIText">$ 1000</string>
+														<string key="IBUIText">$ 0</string>
 														<reference key="IBUITextColor" ref="363634429"/>
 														<nil key="IBUIHighlightedColor"/>
 														<int key="IBUIBaselineAdjustment">0</int>
@@ -1038,7 +1039,7 @@
 													<object class="IBUILabel" id="744440174">
 														<reference key="NSNextResponder" ref="615550100"/>
 														<int key="NSvFlags">292</int>
-														<string key="NSFrame">{{8, 9}, {65, 21}}</string>
+														<string key="NSFrame">{{8, 0}, {65, 21}}</string>
 														<reference key="NSSuperview" ref="615550100"/>
 														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="621713494"/>
@@ -1049,7 +1050,7 @@
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 														<string key="IBUIText">Codigo</string>
-														<reference key="IBUITextColor" ref="363634429"/>
+														<reference key="IBUITextColor" ref="60920910"/>
 														<nil key="IBUIHighlightedColor"/>
 														<int key="IBUIBaselineAdjustment">0</int>
 														<reference key="IBUIFontDescription" ref="911928210"/>
@@ -1059,7 +1060,7 @@
 													<object class="IBUILabel" id="621713494">
 														<reference key="NSNextResponder" ref="615550100"/>
 														<int key="NSvFlags">292</int>
-														<string key="NSFrame">{{86, 9}, {135, 21}}</string>
+														<string key="NSFrame">{{86, 0}, {135, 21}}</string>
 														<reference key="NSSuperview" ref="615550100"/>
 														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="902164737"/>
@@ -1070,21 +1071,20 @@
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 														<string key="IBUIText">10</string>
-														<reference key="IBUITextColor" ref="363634429"/>
+														<reference key="IBUITextColor" ref="60920910"/>
 														<nil key="IBUIHighlightedColor"/>
 														<int key="IBUIBaselineAdjustment">0</int>
-														<int key="IBUITextAlignment">2</int>
 														<reference key="IBUIFontDescription" ref="911928210"/>
 														<reference key="IBUIFont" ref="378115022"/>
 														<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 													</object>
 												</array>
-												<string key="NSFrame">{{20, 78}, {229, 39}}</string>
+												<string key="NSFrame">{{20, 96}, {229, 21}}</string>
 												<reference key="NSSuperview" ref="625050204"/>
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="744440174"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
-												<reference key="IBUIBackgroundColor" ref="229616905"/>
+												<reference key="IBUIBackgroundColor" ref="88082018"/>
 												<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 											</object>
 										</array>
@@ -1107,6 +1107,7 @@
 												<string key="NSFrameSize">{600, 200}</string>
 												<reference key="NSSuperview" ref="461437615"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="606265170"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<reference key="IBUIBackgroundColor" ref="88082018"/>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -1149,7 +1150,7 @@
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 2000}, {768, 1004}}</string>
+						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="139324216"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="155032314"/>
@@ -1399,14 +1400,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">productName</string>
-						<reference key="source" ref="940565058"/>
-						<reference key="destination" ref="648001035"/>
-					</object>
-					<int key="connectionID">819</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">productImage</string>
 						<reference key="source" ref="940565058"/>
 						<reference key="destination" ref="684541971"/>
@@ -1436,14 +1429,6 @@
 						<reference key="destination" ref="1051236982"/>
 					</object>
 					<int key="connectionID">826</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">group2Label</string>
-						<reference key="source" ref="940565058"/>
-						<reference key="destination" ref="635264972"/>
-					</object>
-					<int key="connectionID">827</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -1492,6 +1477,14 @@
 						<reference key="destination" ref="759182984"/>
 					</object>
 					<int key="connectionID">853</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">productName</string>
+						<reference key="source" ref="940565058"/>
+						<reference key="destination" ref="635264972"/>
+					</object>
+					<int key="connectionID">860</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1728,8 +1721,8 @@
 						<reference key="object" ref="155032314"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="160276879"/>
-							<reference ref="625050204"/>
 							<reference ref="461437615"/>
+							<reference ref="625050204"/>
 						</array>
 						<reference key="parent" ref="940565058"/>
 					</object>
@@ -1750,7 +1743,6 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="684541971"/>
 							<reference ref="1051236982"/>
-							<reference ref="635264972"/>
 							<reference ref="902164737"/>
 							<reference ref="345305100"/>
 							<reference ref="615889997"/>
@@ -1758,6 +1750,7 @@
 							<reference ref="50988234"/>
 							<reference ref="862991139"/>
 							<reference ref="615550100"/>
+							<reference ref="635264972"/>
 						</array>
 						<reference key="parent" ref="155032314"/>
 					</object>
@@ -1986,7 +1979,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">859</int>
+			<int key="maxID">860</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2093,7 +2086,6 @@
 						<string key="codelabel">UILabel</string>
 						<string key="descriptionLabel">UITextView</string>
 						<string key="group1Label">UILabel</string>
-						<string key="group2Label">UILabel</string>
 						<string key="multipleLabel">UILabel</string>
 						<string key="productImage">EQImageView</string>
 						<string key="productName">UILabel</string>
@@ -2117,10 +2109,6 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="group1Label">
 							<string key="name">group1Label</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="group2Label">
-							<string key="name">group2Label</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="multipleLabel">
@@ -2237,6 +2225,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/UICollectionViewFlowLayout.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICollectionViewLayout</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICollectionViewLayout.h</string>
 					</object>
 				</object>
 			</array>
